banking-ml-k8s_OLD/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-ml-service
  labels:
    app: banking-ml
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: banking-ml
